plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'dev.ghidraex'
version = '0.1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '26'
    modules = ['javafx.controls']
}

application {
    mainClass = 'dev.ghidraex.fx.GhidraFxApp'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    testLogging {
        events 'failed', 'skipped'
        exceptionFormat = 'full'
    }
}
